[package]
name = "krybs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
globset = "0.4"
indicatif = "0.17"
walkdir = "2.4"
bytes = "1.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"