[package]
name = "krybs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
walkdir = "2.4"
globset = "0.4"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"
zeroize = "1.7"
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
hex-literal = "0.4"
cipher = "0.4"
streebog = { version = "0.11.0-rc.3" }
dirs = "5.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"